--- a/ideasboard/src/App.css
+++ b/ideasboard/src/App.css
@@ -10,7 +10,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 20vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -30,4 +30,13 @@
   to {
     transform: rotate(360deg);
   }
+}
+.tile{
+  height: 150px;
+  width: 150px;
+  margin: 10px;
+  background: lightyellow;
+  float: left;
+  font-size: 11px;
+  text-align: left;
 }
