--- a/ideasboard/src/App.css
+++ b/ideasboard/src/App.css
@@ -3,6 +3,11 @@
   height: 150px;
   padding: 20px;
 }
+.App{
+  background: black;
+  color: white
+}
+
 
 .App-intro {
   font-size: large;
@@ -12,7 +17,7 @@
   height: 250px;
   width: 250px;
   margin: 10px;
-  background: lightyellow;
+  background: black;
   float: left;
   font-size: 15px;
   text-align: left;
