--- a/ideasboard/src/App.css
+++ b/ideasboard/src/App.css
@@ -1,6 +1,6 @@
 .App-header {
   text-align: center;
-  height: 150px;
+  height: 100px;
   padding: 20px;
 }
 .App{
@@ -17,20 +17,27 @@
   height: 250px;
   width: 250px;
   margin: 10px;
-  background: black;
+  background: #192a56;
   float: left;
   font-size: 15px;
   text-align: left;
 }
 .newideabutton{
-  background: darkblue;
-  color: white;
-  border: none;
-  font-size: 18px;
-  cursor: pointer;
-  margin-right: 10px;
-  margin-left: 10px;
-  padding:10px;
-  float: left;
+  display: inline-block;
+padding: 15px 25px;
+font-size: 24px;
+cursor: pointer;
+text-align: center;
+text-decoration: none;
+outline: none;
+color: #fff;
+background-color: #4CAF50;
+border: none;
+border-radius: 15px;
+box-shadow: 0 9px #999;
+float: left;
+}
 
+h4{
+  color: #4CAF50;
 }
