--- a/ideasboard/src/App.css
+++ b/ideasboard/src/App.css
@@ -17,14 +17,14 @@
   height: 250px;
   width: 250px;
   margin: 10px;
-  background: #22a6b3;
+  background: #ffcccc;
   float: left;
   font-size: 16px;
   text-align: left;
   color: black;
 }
 .tile:hover {
-  background-color: #82ccdd;
+  background-color: #ffb8b8;
 }
 .newideabutton{
   display: inline-block;
@@ -35,16 +35,16 @@ text-align: center;
 text-decoration: none;
 outline: none;
 color: #fff;
-background-color: #05c46b;
+background-color: #ff4d4d;
 border: none;
 border-radius: 15px;
-box-shadow: 0 9px #999;
+box-shadow: 0 9px #1e272e;
 float: left;
 }
-.newideabutton:hover {background-color: #4CAF50 }
+.newideabutton:hover {background-color: #ff3838}
 
 h4{
-  color: #0a3d62;
+  color: #1e272e;
   font-size: 20px;
 }
 .input:focus {
